[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/laser.png" type="Texture" id=1]
[ext_resource path="res://scenes/ship/weapon/projectile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 16.0

[node name="Projectile" type="Area2D"]
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.407843, 1, 0, 1 )
show_behind_parent = true
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, 0 )
scale = Vector2( 1.42523, 0.295806 )

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
